# wdapty

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
credentials/: Cargo.toml
credentials/src/: lib.rs
credentials/src/providers/: aws.rs  mod.rs  provider.rs
file_processing/: Cargo.toml
file_processing/resources/test/examples/: test_file1.parq
file_processing/src/: lib.rs
file_processing/src/dataframe/: datetime.rs  expressions.rs  file.rs  mod.rs  operations.rs  parq.rs  processor.rs  test.rs
src/: lib.rs  main.rs
src/commands/: config.rs  configure.rs  input.rs  mod.rs  pattern.rs
src/input/: mod.rs
tests/: cli.rs
