[package]
name = "file_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
log = "0.4.21"
polars = { version = "0.38.3", features = ["lazy", "parquet"] }
rand = "0.8.5"
shellexpand = "3.1.0"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
